# contrail-segmentation

./: .gitignore  README.md  pyproject.toml
notebooks/: colab_dino_mlp_training.ipynb  kaggle_convnext_training.ipynb
outputs/2026-03-19/17-23-29/.hydra/: hydra.yaml
outputs/2026-03-19/17-23-57/.hydra/: hydra.yaml
outputs/2026-03-19/17-24-33/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-19/17-26-46/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-19/17-27-13/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-19/17-28-59/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-19/17-32-25/.hydra/: hydra.yaml
outputs/2026-03-19/17-34-54/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-19/17-36-16/.hydra/: hydra.yaml
outputs/2026-03-19/17-36-45/.hydra/: hydra.yaml
outputs/2026-03-19/18-08-38/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-19/18-12-33/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-19/18-18-03/.hydra/: hydra.yaml
outputs/2026-03-19/18-50-44/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-19/18-52-36/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-19/18-55-03/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-19/19-30-47/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/contrail_segmentation/: __init__.py
src/contrail_segmentation/config/: default.yaml  wandb.yaml
src/contrail_segmentation/config/data/: data.yaml
src/contrail_segmentation/config/model/: attention_unet_convnext.yaml  dino_mlp.yaml  dummy.yaml  pretrained_unet.yaml  unet.yaml
src/contrail_segmentation/config/models/: pretrained_unet.yaml  unet.yaml
src/contrail_segmentation/config/optim/: adam.yaml
src/contrail_segmentation/config/trainer/: train.yaml
src/contrail_segmentation/data/: dataset.py  dataset_modified.py  plotting.py  utils.py
src/contrail_segmentation/models/: attention_unet_convnext.py  dino_dpt.py  dino_mlp.py  dummy.py  pretrained_unet.py  unet.py  utils.py
src/contrail_segmentation/scripts/: get_data.py
src/contrail_segmentation/train/: losses.py  trainer.py  utils.py
