[project]
name = "contrail-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aryan Garg", email = "aryangarg794@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
contrail-segmentation = "contrail_segmentation:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
